k8s/namespace.yaml
#namespace dedicado para la aplicación
apiVersion: v1
kind: Namespace
metadata:
  name: microapp
