k8s/frontend.yaml
# Frontend web 
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels: {app: frontend}
spec:
  replicas: 2
  selector:
    matchLabels: {app: frontend}
  template:
    metadata:
      labels: {app: frontend}
    spec:
      enableServiceLinks: false
      restartPolicy: Always
      containers:
        - name: frontend
          image: uiiz/front-service:1.1
          ports:
            - containerPort: 5001
          resources:
            requests: {cpu: 50m, memory: 64Mi}
            limits: {memory: 256Mi}
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  type: ClusterIP
  selector: {app: frontend}
  ports:
    - port: 5001
      targetPort: 5001
