k8s/products.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: products
  labels: {app: products}
spec:
  replicas: 2
  selector:
    matchLabels: {app: products}
  template:
    metadata:
      labels: {app: products}
    spec:
      enableServiceLinks: false     
      restartPolicy: Always         
      containers:
        - name: products
          image: uiiz/products-service:1.0
          ports:
            - containerPort: 3002
          readinessProbe:           
            httpGet: {path: /healthcheck, port: 3002}
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:            
            httpGet: {path: /healthcheck, port: 3002}
            initialDelaySeconds: 30
            periodSeconds: 10
          resources:
            requests: {cpu: 50m, memory: 64Mi}
            limits: {memory: 256Mi}
---
apiVersion: v1
kind: Service
metadata:
  name: products                          
spec:
  type: ClusterIP
  selector: {app: products}
  ports:
    - port: 3002
      targetPort: 3002
