k8s/users.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users
  labels: {app: users}
spec:
  replicas: 2
  selector:
    matchLabels: {app: users}
  template:
    metadata:
      labels: {app: users}
    spec:
      enableServiceLinks: false    
      restartPolicy: Always        
      containers:
        - name: users
          image: uiiz/users-service:1.0
          ports:
            - containerPort: 3001
          readinessProbe:           
            httpGet: {path: /healthcheck, port: 3001}
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:            
            httpGet: {path: /healthcheck, port: 3001}
            initialDelaySeconds: 30
            periodSeconds: 10
          resources:
            requests: {cpu: 50m, memory: 64Mi}
            limits: {memory: 256Mi}
---
apiVersion: v1
kind: Service
metadata:
  name: users                          
spec:
  type: ClusterIP
  selector: {app: users}
  ports:
    - port: 3001
      targetPort: 3001
