k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microapp-ingress
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
    - http:
        paths:
          - path: /api/users
            pathType: Prefix
            backend:
              service:
                name: users
                port: {number: 3001}
          - path: /api/login
            pathType: Prefix
            backend:
              service:
                name: users
                port: {number: 3001}
          - path: /api/logout
            pathType: Prefix
            backend:
              service:
                name: users
                port: {number: 3001}
          - path: /api/products
            pathType: Prefix
            backend:
              service:
                name: products
                port: {number: 3002}
          - path: /api/orders
            pathType: Prefix
            backend:
              service:
                name: orders
                port: {number: 3003}
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port: {number: 5001}
